force-app/main/default/objects/refedge__Reward__c/refedge__Reward__c.object-meta.xml
<CustomObject>
    <description>Custom Object to Store Rewards.(Bound 4)</description>
    <label>Reward</label>
    <nameField>
        <displayFormat>RW-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rewards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>