force-app/main/default/objects/refedge__Reward__c/fields/refedge__Influitive_Id__c.field-meta.xml
<CustomField>
    <fullName>refedge__Influitive_Id__c</fullName>
    <label>Influitive Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>