force-app/main/default/objects/refedge__Reward__c/listViews/refedge__All.listView-meta.xml
<ListView>
    <fullName>refedge__All</fullName>
    <columns>NAME</columns>
    <columns>refedge__Account__c</columns>
    <columns>refedge__Contact__c</columns>
    <columns>refedge__Transaction__c</columns>
    <columns>refedge__Amount__c</columns>
    <columns>refedge__Available_Points__c</columns>
    <columns>refedge__Expired_Points__c</columns>
    <columns>refedge__Referenceability_Type__c</columns>
    <columns>refedge__Automatically_Assigned__c</columns>
    <columns>refedge__Expiration_Date__c</columns>
    <columns>refedge__Expired__c</columns>
    <columns>refedge__Account_Request__c</columns>
    <columns>refedge__Contact_Request__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>